# rmq_monitor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config_sample.toml
.github/workflows/: build.yml  docker.yml  publish_release.yml
src/: api.rs  config.rs  main.rs  rmq.rs  slack.rs  utils.rs
