[package]
name = "rmq_monitor"
version = "0.1.1"
authors = ["Rostislav Raykov <z@zbrox.org>"]
edition = "2018"
description = "A simple tool which monitors RabbitMQ and notifies via Slack (legacy webhooks) when certain thresholds are met"
repository = "https://github.com/zbrox/rmq_monitor"
homepage = "https://github.com/zbrox/rmq_monitor"
keywords = ["rabbitmq", "rmq", "slack", "notification", "alerts"]
categories = ["command-line-utilities"]
license = "MIT"
documentation = "https://github.com/zbrox/rmq_monitor"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
toml = "0.5.6"
structopt = "0.3.13"
human-panic = "1.0.3"
anyhow = "1.0.28"
env_logger = "0.7.1"
log = "0.4.8"
async-std = {version = "1.5.0", features = ["unstable"]}
surf = "1.0.3"
base64 = "0.12.0"
